--- a/.editorconfig
+++ b/.editorconfig
@@ -2,5 +2,16 @@ root = true
 
 [*.luau]
 indent_style = tab
+indent_size = 4
 charset = utf-8
+trim_trailing_whitespace = true
+insert_final_newline = true
+end_of_line = lf
+
+[*.json]
+indent_style = tab
+indent_size = 4
+charset = utf-8
+end_of_line = lf
+insert_final_newline = true
 trim_trailing_whitespace = true
