whole ass game -> single model

--- a/default.project.json
+++ b/default.project.json
@@ -1,98 +1,8 @@
 {
-	"name": "your-project-name",
+	"name": "UI Framework",
 	"emitLegacyScripts": false,
 
 	"tree": {
-		"$className": "DataModel",
-
-		"ReplicatedStorage": {
-			"$className": "ReplicatedStorage",
-
-			"Shared": {
-				"$className": "Folder",
-				"$path": "src/shared"
-			},
-
-			"Assets": {
-				"$className": "Folder",
-				"$path": "assets"
-			}
-		},
-
-		"ServerScriptService": {
-			"$className": "ServerScriptService",
-
-			"Main": {
-				"$path": "src/server"
-			}
-		},
-
-		"ReplicatedFirst": {
-			"$className": "ReplicatedFirst",
-
-			"Main": {
-				"$path": "src/client"
-			}
-		},
-
-		"StarterPlayer": {
-			"$className": "StarterPlayer",
-			"$properties": {
-				"EnableMouseLockOption": false,
-				"LoadCharacterAppearance": false
-			}
-		},
-
-		"Players": {
-			"$className": "Players",
-			"$properties": {
-				"CharacterAutoLoads": false
-			}
-		},
-
-		"HttpService": {
-			"$className": "HttpService",
-			"$properties": {
-				"HttpEnabled": true
-			}
-		},
-
-		"Workspace": {
-			"$className": "Workspace",
-			"$properties": {
-				"FilteringEnabled": true,
-				"StreamingEnabled": false
-			}
-		},
-
-		"Lighting": {
-			"$className": "Lighting",
-			"$properties": {
-				"Ambient": [
-					0,
-					0,
-					0
-				],
-				"Brightness": 2,
-				"GlobalShadows": true,
-				"Outlines": false,
-				"Technology": "Future"
-			}
-		},
-
-		"SoundService": {
-			"$className": "SoundService",
-			"$properties": {
-				"RespectFilteringEnabled": true
-			}
-		},
-
-		"TextChatService": {
-			"$className": "TextChatService",
-			"$properties": {
-				"ChatVersion": "TextChatService",
-				"CreateDefaultCommands": false
-			}
-		}
+		"$path": "src"
 	}
 }
