--- a/.github/workflows/upload.yml
+++ b/.github/workflows/upload.yml
@@ -9,7 +9,7 @@ jobs:
   upload:
     if: github.event.pull_request == null || github.event.pull_request.head.repo.full_name == github.repository
     runs-on: ubuntu-latest
-    environment: ROBLOX_SECURITY_TOKEN
+    environment: ROBLOX-SECURITY-TOKEN
 
     steps:
       - name: Checkout repo
