--- a/.github/workflows/upload-main.yml
+++ b/.github/workflows/upload-main.yml
@@ -31,4 +31,4 @@ jobs:
         env:
           ROBLOSECURITY: ${{ secrets.ROBLOX_SECURITY }}
         run: |
-          rojo upload --asset-id 106147285685243 --cookie "$ROBLOSECURITY"
+          rojo upload --asset_id 106147285685243 --cookie "$ROBLOSECURITY"
