final changes hopefully

--- a/.github/workflows/upload-dev.yml
+++ b/.github/workflows/upload-dev.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Install unzip (if not installed)
+      - name: Install unzip
         run: sudo apt-get update && sudo apt-get install -y unzip
 
       - name: Download and install Rojo
@@ -23,6 +23,9 @@ jobs:
           unzip -q rojo.zip
           chmod +x rojo
           sudo mv rojo /usr/local/bin/rojo
+
+      - name: Rename Package
+        run: sed -i 's/"name": "Slate"/"name": "Slate-dev"/' default.project.json
 
       - name: Upload to Roblox
         env:
