--- a/.github/workflows/upload-main.yml
+++ b/.github/workflows/upload-main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
-      - name: Install unzip (if not installed)
+      - name: Install unzip
         run: sudo apt-get update && sudo apt-get install -y unzip
 
       - name: Download and install Rojo
