--- a/.github/workflows/upload-dev.yml
+++ b/.github/workflows/upload-dev.yml
@@ -17,7 +17,15 @@ jobs:
       - name: Install unzip
         run: sudo apt-get update && sudo apt-get install -y unzip
 
+      - name: Cache Rojo
+        id: rojo-cache
+        uses: actions/cache@v3
+        with:
+          path: /usr/local/bin/rojo
+          key: rojo-linux-x86_64-7.5.1
+
       - name: Download and install Rojo
+        if: steps.rojo-cache.outputs.cache-hit != 'true'
         run: |
           curl -sL -o rojo.zip https://github.com/rojo-rbx/rojo/releases/latest/download/rojo-7.5.1-linux-x86_64.zip
           unzip -q rojo.zip
