surely chatgpt will not diddle my insides

--- a/.github/workflows/upload-dev.yml
+++ b/.github/workflows/upload-dev.yml
@@ -63,11 +63,14 @@ jobs:
       - name: Checkout repo
         uses: actions/checkout@v3
 
+      - name: Fetch full git history
+        run: git fetch --unshallow
+
       - name: Send webhook notification with latest commits
         env:
           WEBHOOK_URL: ${{ secrets.WEBHOOK_URL }}
         run: |
-          COMMITS=$(git log "${{ github.event.before }}..${{ github.sha }}" --pretty=format:'[`%h`](https://github.com/NoahIsADeveloper/Slate/commit/%H) %s - %an' | jq -R . | jq -s .)
+          COMMITS=$(git log -5 --pretty=format:'[`%h`](https://github.com/NoahIsADeveloper/Slate/commit/%H) %s - %an' | jq -R . | jq -s .)
           DESCRIPTION=$(echo $COMMITS | jq -r 'join("\n")')
 
           PAYLOAD=$(jq -n --arg desc "$DESCRIPTION" '{
