--- a/.github/workflows/upload-dev.yml
+++ b/.github/workflows/upload-dev.yml
@@ -72,8 +72,9 @@ jobs:
           BEFORE: ${{ github.event.before }}
           AFTER: ${{ github.event.after }}
         run: |
-          COMMITS=$(git log ... --pretty=format:'[`%h`](https://github.com/NoahIsADeveloper/Slate/commit/%H) %<(50,trunc)%s - %an' | jq -R . | jq -s .)
+          COMMITS=$(git log "${{ github.event.before }}..${{ github.sha }}" --pretty=format:'[`%h`](https://github.com/NoahIsADeveloper/Slate/commit/%H) %.50s - %an' | jq -R . | jq -s .)
           DESCRIPTION=$(echo $COMMITS | jq -r 'join("\n")')
+
           PAYLOAD=$(jq -n --arg desc "$DESCRIPTION" '{
             "content": null,
             "embeds": [
